--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
 		"autoprefixer": "^10.4.20",
 		"eslint": "^9.0.0",
 		"eslint-plugin-svelte": "^2.36.0",
+		"flowbite-svelte": "^0.46.22",
 		"globals": "^15.0.0",
 		"svelte": "^4.2.7",
 		"svelte-check": "^4.0.0",
